--- a/resources/podTemplates/initial-agent.yaml
+++ b/resources/podTemplates/initial-agent.yaml
@@ -10,6 +10,8 @@ spec:
       volumeMounts:
         - name: docker-socket
           mountPath: /var/run/docker.sock
+      securityContext:
+        runAsUser: 0    
       command: ["cat"]
       tty: true  
   volumes:
