--- a/resources/podTemplates/initial-agent.yaml
+++ b/resources/podTemplates/initial-agent.yaml
@@ -8,12 +8,12 @@ spec:
     - name: docker-initial
       image: docker:25.0.3-cli  # Lightweight Docker CLI-only image
       volumeMounts:
-        - name: docker-socket_initial
+        - name: docker-socket-initial
           mountPath: /var/run/docker.sock 
       command: ["cat"]
       tty: true  
   volumes:
-    - name: docker-socket_initial
+    - name: docker-socket-initial
       hostPath:
         path: /var/run/docker.sock
         type: Socket     
