--- a/resources/podTemplates/mvn-docker-helm.yaml
+++ b/resources/podTemplates/mvn-docker-helm.yaml
@@ -11,7 +11,7 @@ spec:
         - cat
       tty: true
     - name: docker
-      image: custom-agent:myversion
+      image: nexus.docker:30050/custom-agent:myversion
       securityContext:
         privileged: true  
     - name: helm
